--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   iconsax: ^0.0.8
   get: ^4.6.6
   get_storage: ^2.1.1
+  flutter_native_splash: ^2.4.1
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,7 @@ flutter:
     - assets/icons/brands/
     - assets/icons/categories/
     - assets/images/
+    - assets/images/on_boarding_images/
     - assets/logos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
