--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_storage: ^2.1.1
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.2.0+3
+  ionicons: ^0.2.2
 
 dev_dependencies:
   flutter_test:
