--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.2.0+3
   ionicons: ^0.2.2
+  flutter_iconly: ^1.0.2
 
 dev_dependencies:
   flutter_test:
