--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   ionicons: ^0.2.2
   flutter_iconly: ^1.0.2
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -71,12 +72,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/fonts/
-    - assets/icons/brands/
-    - assets/icons/categories/
-    - assets/images/
-    - assets/images/verify_email/
     - assets/images/on_boarding_images/
+    - assets/images/verify_email/
+    - assets/icons/categories/
+    - assets/images/banners/
+    - assets/icons/brands/
+    - assets/images/
+    - assets/fonts/
     - assets/logos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
