--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/on_boarding_images/
+    - assets/images/payment_methods/
     - assets/images/verify_email/
     - assets/images/product_cart/
     - assets/icons/categories/
