--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   readmore: ^3.0.0
   flutter_rating_bar: ^4.0.1
   firebase_core: ^3.6.0
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
