--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   firebase_core: ^3.6.0
   loading_animation_widget: ^1.3.0
+  page_view_dot_indicator: ^2.3.0
 
 dev_dependencies:
   flutter_test:
