--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   firebase_core: ^3.6.0
   loading_animation_widget: ^1.3.0
   page_view_dot_indicator: ^2.3.0
+  lottie: ^3.1.3
+  connectivity_plus: ^6.1.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +86,7 @@ flutter:
     - assets/images/verify_email/
     - assets/images/product_cart/
     - assets/icons/categories/
+    - assets/images/loading/
     - assets/images/banners/
     - assets/icons/brands/
     - assets/images/user/
