change splahs screen

--- a/splash.yml
+++ b/splash.yml
@@ -3,7 +3,8 @@ flutter_native_splash:
   color_dark: "#272727"
   image: assets/logos/t_shirt_logo_balck.png
   image_dark: assets/logos/t_shirt_logo_white.png
-
+  android: true
+  ios: true
 
   android_12:
     color: "#ffffff"
