--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   cloud_firestore: ^5.4.4
   google_sign_in: ^6.2.1
   skeletonizer: ^1.4.2
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.4
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
